--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-    mongo:
-        images: mongo
+    mongodb:
+        image: mongo
         ports:
-            - 27017: 27017
+            - "27017:27017"
