--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.7",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "express": "^4.19.2",
-    "mongodb": "^6.5.0"
+    "mongodb": "^6.5.0",
+    "multer": "1.4.5-lts.1"
   }
 }
