criando aggregate para voltar as medias dos valores

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -4,3 +4,5 @@ services:
         image: mongo
         ports:
             - "27017:27017"
+        volumes:
+            - ./fixture/init.js:/docker-entrypoint-initdb.d/init.js
