--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.16",
     "apexcharts": "3.41.0",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
     "react-dom": "^18.2.0",
